--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
     <title>N8tives pyros bonfire </title>
-realizing i have specialties in
    <meta charset="utf-8">
    </head>
    <body>
-   <h1>Heading 1 </h1>
+   <h1>my skills  </h1>
+   realizing i have specialties in video games cooking and billiards pre covid
    </body>
    </html>
