--- a/index.html
+++ b/index.html
@@ -1,11 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>N8tives pyros bonfire </title>
+  <title>N8tives pyros bonfire </title>
    <meta charset="utf-8">
+<body>
+     <!-- hello fellow valt dwellers -->
+
+  </body>
    </head>
    <body>
    <h1>my skills </h1>
-   realizing i have specialties in video games cooking and billiards pre covid
+   <p> realizing i have specialties in video games cooking and billiards pre covid</p>
+  <section>
+<h2>my ways of staying sane during covid</h2>
+</section>
+<ol>
+<li>1st gaming</li>
+<li>2nd memes</li>
+<li>3rd picking up new hobies </li>
+<li>4th music</li>
+</ol>
+
+
    </body>
    </html>
+<footer>
+<p>website made by willie jack/ N8tivepyro<p>
+</footer>
