--- a/index.html
+++ b/index.html
@@ -8,10 +8,8 @@
    <body>
    <h1>my skills </h1>
    <p> realizing i have specialties in video games cooking and billiards pre covid</p>
-   <body>
-        <!-- hello fellow valt dwellers -->
 
-     </body>
+       <body>    <!-- hello fellow valt dwellers -->   </body>
   <section>
 <h2>my ways of staying sane during covid</h2>
 </section>
