--- a/index.html
+++ b/index.html
@@ -1,26 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>N8tives pyros bonfire </title>
+    <title>N8tives pyros bonfire </title>
    <meta charset="utf-8">
-
+  <!-- hello fellow valt dwellers -->
    </head>
    <body>
-   <h1>my skills </h1>
-   <p> realizing i have specialties in video games cooking and billiards pre covid</p>
+       <h1>my skills </h1>
+         <p> realizing i have specialties in video games cooking and billiards pre covid</p>
 
-       <body>    <!-- hello fellow valt dwellers -->   </body>
+
   <section>
 <h2>my ways of staying sane during covid</h2>
 </section>
-
-
-<ol>
+          <ol>
 <li>1st gaming</li>
-<li>2nd memes</li>
-<li>3rd picking up new hobies </li>
-<li>4th music</li>
-</ol>
+          <li>2nd memes</li>
+          <li>3rd picking up new hobies </li>
+          <li>4th music</li>
+          </ol>
 
 
    </body>
