--- a/index.html
+++ b/index.html
@@ -9,18 +9,30 @@
        <h1>my skills </h1>
          <p> realizing i have specialties in video games cooking and billiards pre covid</p>
 
-
-  <section>
-<h2>my ways of staying sane during covid</h2>
+         <p><en>and i figured it would be selfish to not share some of them </en></p>
+<section>
+<h1>my ways of staying sane during covid</h1>
 </section>
-          <ol>
-<li>1st gaming</li>
-          <li>2nd memes</li>
-          <li>3rd picking up new hobies </li>
-          <li>4th music</li>
-          </ol>
+ <ol>
+   <li>1st gaming</li>
+   <li>2nd memes</li>
+    <li>3rd picking up new hobies </li>
+   <li>4th music</li>
+</ol>
+
+<h2>lets get back to basics <h2>
+         <p>being able to explore cooking in all aspects. from start to finish like making a soup starting from the stock being the most important step where you can build the foundations for an amazing soup. and stocks are easy to prep for you can save all of your veggy trimmings in a freezer bag like onion tops skins, celery ends and flowers, carrot tops and peels (yes you can use all of this). asparagus ends the woody bits. then you have the bones of your choice which rarely changes the veggys for the stock but to roast or not to roast is the question and almost every time the right awnser is roast em for the flavour. ^.^</p>
+
+         <p>
+         </p>
+
+
 
 <h2></h2>
+
+
+
+
    </body>
    </html>
 <footer>
