--- a/index.html
+++ b/index.html
@@ -11,17 +11,21 @@
 
          <p><en>and i figured it would be selfish to not share some of them </en></p>
 <section>
-<h1>my ways of staying sane during covid</h1>
+  <h1>my ways of staying sane during covid</h1>
 </section>
  <ol>
-   <li>1st gaming</li>
-   <li>2nd memes</li>
-    <li>3rd picking up new hobies </li>
-   <li>4th music</li>
+   <li> gaming</li>
+   <li> memes</li>
+    <li>practicing cooking</li>
+   <li>music</li>
+   <li>finding new hobies</li>
 </ol>
 
+<h1>I have no idea where I would be with out games </h1>
+<p>for real though ive been gaming sence i was 3 ish years old with the Snes console. allways keeping up to date with consoles and hand helds watching the curve that was High def gaming from 8 bit to 16 and the polygon systems used in playstation one and the n64 then the smoothing out of the systems each generation slowly out graphics the other. the changes in controlers and the ptsd that came with the n64 controlers (i love nostalgia as much as the next but still they sucked) always been a sony kid other then owning a O.G xbox with some of the classics. I also developed an addiction to collect all my personal favorits that i remember gaming as a kid. from conkers bad furday live and reloded, fable lost chapters . the punisher, Narc, tony hawks american wasteland, THUG/THUG2, for the original xbox   sims 1, busting out, 2 and urbz sims in the city, worms 3D, champions return to arms, NBA street 1 and 2,all for the playstion 2. there is much more, i love my collection. but i have just bought a gaming pc for the first time so i have more options for over priced games with emulators, im not a purist when it comes to collecting if its the game and it works the same way the original works im not going to pay 60$-80$ for one mario party for n64 where i could get a modded cart that had 1,2,3,and 12 random SNes games for 35$ +shipping.  </p>
+
 <h2>lets get back to basics <h2>
-         <p>being able to explore cooking in all aspects. from start to finish like making a soup starting from the stock being the most important step where you can build the foundations for an amazing soup. and stocks are easy to prep for you can save all of your veggy trimmings in a freezer bag like onion tops skins, celery ends and flowers, carrot tops and peels (yes you can use all of this). asparagus ends the woody bits. then you have the bones of your choice which rarely changes the veggys for the stock but to roast or not to roast is the question and almost every time the right awnser is roast em for the flavour. ^.^</p>
+         <p>being able to explore cooking in all aspects. from start to finish like making a soup starting from the stock being the most important step where you can build the foundations for an amazing soup. and stocks are easy to prep for you can save all of your veggy trimmings in a freezer bag like onion tops skins, celery ends and flowers, carrot tops and peels (yes you can use all of this). asparagus ends the woody bits. then you have the bones of your choice which rarely changes the veggys for the stock but to roast or not to roast is the question and almost every time the right awnser is roast em for the flavour. ^.^ finding new recipes i want to actually put on paper which is deffinatly new to me cause i just remember them no need for it but now i like to share. </p>
 
          <p>
          </p>
