--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <p>for the darker side of my humour i find memes the best way to avoid my life in a dark little picture with darker jokes in them here are my top ten that helped pass the time  </p>
 <!--insert my selected 10 memes from my phone memerory-->
 
-<h2>lets get back to basics <h2>
+<h2>lets get back to basics </h2>
          <p>being able to explore cooking in all aspects. from start to finish like making a soup starting from the stock being the most important step where you can build the foundations for an amazing soup. and stocks are easy to prep for you can save all of your veggy trimmings in a freezer bag like onion tops skins, celery ends and flowers, carrot tops and peels (yes you can use all of this). asparagus ends the woody bits. then you have the bones of your choice which rarely changes the veggys for the stock but to roast or not to roast is the question and almost every time the right awnser is roast em for the flavour. ^.^ finding new recipes i want to actually put on paper which is deffinatly new to me cause i just remember them no need for it but now i like to share. </p>
 
          <p>meal planning was alot of fun aswell especialy with a costco card, the ability to get 3 whole chickens was great we broke them down and vaccumed sealed the meat product.chicken legs thighs and suprems all nicely frozen in meal packs made life really easy to just throw something together and have fun just blind pulling something out of the freezer and be like yeah this is the base. challange your self, make it fun do that fancy 5 course date night special . plan it together work on it together make a day out of it. the love will definatly be in the food especialy if you cook together. </p>
