--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
     <title>N8tives pyros bonfire </title>
     <meta charset="utf-8">
-    <!-- hello fellow valt dwellers -->
+    <!-- hello fellow vault dwellers -->
    </head>
    <body>
        <h1>my skills </h1>
-         <p> realizing i have specialties in video games cooking and billiards pre covid</p>
+         <p> realizing I have specialties in video games cooking and billiards pre covid</p>
 
          <p><en>and i figured it would be selfish to not share some of them </en></p>
 <section>
@@ -18,27 +18,27 @@
    <li> memes</li>
     <li>practicing cooking</li>
    <li>music</li>
-   <li>finding new hobies</li>
+   <li>finding new hobbies</li>
 </ol>
 
 <h1>I have no idea where I would be with out games </h1>
-    <p>for real though ive been gaming sence i was 3 ish years old with the Snes console. allways keeping up to date with consoles and hand helds watching the curve that was High def gaming from 8 bit to 16 and the polygon systems used in playstation one and the n64 then the smoothing out of the systems each generation slowly out graphics the other. the changes in controlers and the ptsd that came with the n64 controlers (i love nostalgia as much as the next but still they sucked) always been a sony kid other then owning a O.G xbox with some of the classics. I also developed an addiction to collect all my personal favorits that i remember gaming as a kid. from conkers bad furday live and reloded, fable lost chapters . the punisher, Narc, tony hawks american wasteland, THUG/THUG2, for the original xbox   sims 1, busting out, 2 and urbz sims in the city, worms 3D, champions return to arms, NBA street 1 and 2,all for the playstion 2. there is much more, i love my collection. but i have just bought a gaming pc for the first time so i have more options for over priced games with emulators, im not a purist when it comes to collecting if its the game and it works the same way the original works im not going to pay 60$-80$ for one mario party for n64 where i could get a modded cart that had 1,2,3,and 12 random SNes games for 35$ +shipping.</p>
+    <p>for real though I’ve been gaming since i was 3 ish years old with the Snes console. always keeping up to date with consoles and hand held watching the curve that was High def gaming from 8 bit to 16 and the polygon systems used in PlayStation one and the n64 then the smoothing out of the systems each generation slowly out graphics the other. the changes in controllers and the ptsd that came with the n64 controllers (i love nostalgia as much as the next but still they sucked) always been a Sony kid other then owning a O.G Xbox with some of the classics. I also developed an addiction to collect all my personal favorites that I remember gaming as a kid. from conkers bad fur day live and reloaded, fable lost chapters. the punisher, Narc, tony hawk’s American wasteland, THUG/THUG2, for the original Xbox   sims 1, busting out, 2 and urbz sims in the city, worm’s 3D, champions return to arms, NBA street 1 and 2, all for the PlayStation 2. there is much more, I love my collection. but i have just bought a gaming pc for the first time so I have more options for over priced games with emulators, I’m not a purist when it comes to collecting if its the game and it works the same way the original works I’m not going to pay 60$-80$ for one Mario party for n64 where I could get a modded cart that had 1,2,3,and 12 random Snes games for 35$ +shipping.</p>
 
 <h2>Just for the meme of it </h2>
-        <p>for the darker side of my humour i find memes the best way to avoid my life in a dark little picture with darker jokes in them here are my top ten that helped pass the time  </p>
-<!--insert my selected 10 memes from my phone memerory-->
+        <p>for the darker side of my humour i find memes the best way to avoid my life in a dark little picture with darker jokes in them here are my top ten that helped pass the time </p>
+<!--insert my selected 10 memes from my phone memory-->
 
 <h2>lets get back to basics </h2>
-         <p>being able to explore cooking in all aspects. from start to finish like making a soup starting from the stock being the most important step where you can build the foundations for an amazing soup. and stocks are easy to prep for you can save all of your veggy trimmings in a freezer bag like onion tops skins, celery ends and flowers, carrot tops and peels (yes you can use all of this). asparagus ends the woody bits. then you have the bones of your choice which rarely changes the veggys for the stock but to roast or not to roast is the question and almost every time the right awnser is roast em for the flavour. ^.^ finding new recipes i want to actually put on paper which is deffinatly new to me cause i just remember them no need for it but now i like to share. </p>
+         <p>being able to explore cooking in all aspects. from start to finish like making a soup starting from the stock being the most important step where you can build the foundations for an amazing soup. and stocks are easy to prep for you can save all of your veggys trimmings in a freezer bag like onion tops skins, celery ends and flowers, carrot tops and peels (yes you can use all of this). asparagus ends the woody bits. then you have the bones of your choice which rarely changes the veggys for the stock but to roast or not to roast is the question and almost every time the right answer is roast em for the flavour. ^.^ finding new recipes I want to actually put on paper which is definably new to me cause I just remember them no need for it but now I like to share. </p>
 
-         <p>meal planning was alot of fun aswell especialy with a costco card, the ability to get 3 whole chickens was great we broke them down and vaccumed sealed the meat product.chicken legs thighs and suprems all nicely frozen in meal packs made life really easy to just throw something together and have fun just blind pulling something out of the freezer and be like yeah this is the base. challange your self, make it fun do that fancy 5 course date night special . plan it together work on it together make a day out of it. the love will definatly be in the food especialy if you cook together. </p>
+         <p>meal planning was a lot of fun as well especially with a Costco card, the ability to get 3 whole chickens was great we broke them down and vacuumed sealed the meat product. Chicken legs thighs and supreme all nicely frozen in meal packs made life really easy to just throw something together and have fun just blind pulling something out of the freezer and be like yeah this is the base. challenge your self, make it fun do that fancy 5 course date night special. plan it together work on it together make a day out of it. the love will defiantly be in the food especially if you cook together. </p>
 
-        <p>with meal planning though the beautiful thing about it is that you just plan a dinner. like pasta or curry are my examples, pull out the classic grandmas stock pot or crab killer and make a big batch have the nights serving and freeze the "leftovers", best to keep meats out of the stuff your freezing and aslong as its air tight it can keep to 6-10 months easy to make portions that can feed the famjam or couples, can do the same with protine portions  </p>
+        <p>with meal planning though the beautiful thing about it is that you just plan a dinner. like pasta or curry are my examples, pull out the classic grandma’s stock pot or crab killer and make a big batch have the nights serving and freeze the "leftovers", best to keep meats out of the stuff your freezing and as long as its air tight it can keep to 6-10 months easy to make portions that can feed the famjam or couples, can do the same with protein portions </p>
 
 <h2>Music is life </h2>
-        <p>I love most music, not a whole lot of country but alot of everything eles from prog rock to hip hop. blues to EDM. raspy scotch wiskey voices like tom waits, to the clear majestic voice of queens freddy mercury. i tend to give everything a chance but i either like it or dont never just in the middle. finding my self just kinda stick to what i know, dont explore much cause i know so much great music, im stuck in 90's early 2000s rapp and hip hop, wu tang clan fat joe 50 cent run the jewls snoop dog. or one of my favorit edm artist, Justice zeds dead adventure club, krewella, Danger glitch mob. and many more but finding music that can take you away for a escape can be the thing you need to get threw thease questionable times  </p>
+        <p>I love most music, not a whole lot of country but a lot of everything else from prog rock to hip hop. blues to EDM. raspy scotch whiskey voices like tom waits, to the clear majestic voice of queens Freddy mercury. I tend to give everything a chance but i either like it or don’t never just in the middle. finding my self just kind of stick to what I know, don’t explore much because I know so much great music, I’m stuck in 90's early 2000s Rapp and hip hop, wu tang clan fat joe 50 cent run the jewels snoop dog. or one of my favorite EDM artist, Justice zeds dead adventure club, krewella, Danger glitch mob. and many more but finding music that can take you away for a escape can be the thing you need to get threw these questionable times  </p>
 
-<h2>a New challanger approaches </h2>
+<h2>a New challenge approaches </h2>
 <p></p>
 
 <h2></h2>
