--- a/index.html
+++ b/index.html
@@ -1,58 +1,70 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>N8tives pyros bonfire </title>
-    <meta charset="utf-8">
-    <!-- hello fellow vault dwellers -->
-   </head>
-   <body>
-       <h1>my skills </h1>
-         <p> realizing I have specialties in video games cooking and billiards pre covid</p>
+<link rel="stylesheet"href="style.css">
 
-         <p><en>and i figured it would be selfish to not share some of them </en></p>
+<title>N8tives pyros bonfire </title>
+    <meta charset="utf-8">
+<!-- hello fellow vault dwellers -->
+
+ </head>   <body>
+   <h2>The 2020 Covid-19 survival guide</h2>
+       <p>being under lock down I found my self like a lot of others and realizing what I liked to do to pass time and make it easier being stuck indoors or the 30 min walk recommended, I decided to be a little bit constructive with my time kind of but trying to figure out what to do here’s my tips for staying sane in the lock down era we are living in now. </p>
+
+      <h1>my skills </h1>
+         <p> realizing I have specialties in video games cooking and billiards pre covid</p>
+     <p>and i figured it would be selfish to not share some of them </p>
 <section>
   <h1>my ways of staying sane during covid</h1>
 </section>
  <ol>
-   <li> gaming</li>
-   <li> memes</li>
+    <li> gaming</li>
+    <li> memes</li>
     <li>practicing cooking</li>
-   <li>music</li>
-   <li>finding new hobbies</li>
+    <li>music</li>
+    <li>finding new hobbies</li>
 </ol>
-
 <h1>I have no idea where I would be with out games </h1>
-    <p>for real though I’ve been gaming since i was 3 ish years old with the Snes console. always keeping up to date with consoles and hand held watching the curve that was High def gaming from 8 bit to 16 and the polygon systems used in PlayStation one and the n64 then the smoothing out of the systems each generation slowly out graphics the other. the changes in controllers and the ptsd that came with the n64 controllers (i love nostalgia as much as the next but still they sucked) always been a Sony kid other then owning a O.G Xbox with some of the classics. I also developed an addiction to collect all my personal favorites that I remember gaming as a kid. from conkers bad fur day live and reloaded, fable lost chapters. the punisher, Narc, tony hawk’s American wasteland, THUG/THUG2, for the original Xbox   sims 1, busting out, 2 and urbz sims in the city, worm’s 3D, champions return to arms, NBA street 1 and 2, all for the PlayStation 2. there is much more, I love my collection. but i have just bought a gaming pc for the first time so I have more options for over priced games with emulators, I’m not a purist when it comes to collecting if its the game and it works the same way the original works I’m not going to pay 60$-80$ for one Mario party for n64 where I could get a modded cart that had 1,2,3,and 12 random Snes games for 35$ +shipping.</p>
 
-<h2>Just for the meme of it </h2>
-        <p>for the darker side of my humour i find memes the best way to avoid my life in a dark little picture with darker jokes in them here are my top ten that helped pass the time </p>
-<!--insert my selected 10 memes from my phone memory-->
+    <p>for real though I’ve been gaming since i was 3 ish years old with the Snes console. always keeping up to date with consoles and hand held watching the curve that was High def gaming from 8 bit to 16 and the polygon systems used in PlayStation one and the n64 then the smoothing out of the systems each generation slowly out graphics the other. the changes in controllers and the ptsd that came with the n64 controllers (i love nostalgia as much as the next but still they sucked) always been a Sony kid other then owning a O.G Xbox with some of the classics. I also developed an addiction to collect all my personal favorites that I remember gaming as a kid. <strong>from conkers bad fur day live and reloaded, fable lost chapters. the punisher, Narc, tony hawk’s American wasteland, THUG/THUG2, for the original Xbox   sims 1, busting out, 2 and urbz sims in the city, worm’s 3D, champions return to arms, NBA street 1 and 2, <strong>all for the PlayStation 2. there is much more, I love my collection. but i have just bought a gaming pc for the first time so I have more options for over priced games with emulators, I’m not a purist when it comes to collecting if its the game and it works the same way the original works I’m not going to pay 60$-80$ for one Mario party for n64 where I could get a modded cart that had 1,2,3,and 12 random Snes games for 35$ +shipping.</p>
+    <div class="center">  <img src="images/thecollection.jpg"alt="my collection"></div>
+
+<a href="https://www.facebook.com/pages/category/Games-Toys/Pyramid-Games-Collectable-239983233369315/">pyramid games nanaimo</a><p>this is where i usually shop to find relics</p>
+
+<h2>  for the meme of it </h2>
+    <p>for the darker side of my humour i find memes the best way to avoid my life in a dark little picture with darker jokes in them here are my top ten that helped pass the time </p>
+<div class="center"><img src="images/meme1.jpg"alt=meme1></div>
+<div class="center"><img src="images/meme2.jpg"alt=meme2.jpg></div>
+<div class="center"><img src="images/meme3.jpg"alt=meme3></div>
+ <div class="center"><img src="images/meme4.jpg"alt=meme4></div>
+<div class="center"><img src="images/meme6.jpg"alt=meme6></div>
+<div class="center"> <img src="images/meme7.jpg"alt=meme7></div>
+<div class="center"> <img src="images/meme8.jpg"alt=meme8></div>
+ <div class="center"><img src="images/meme9.jpg"alt=meme9></div>
+<div class="center"> <img src="images/meme10.jpg"alt=meme10></div>
+      <p>the thought of having copyrights to a meme seems like a joke to me that there is a original image and people just add a terrible joke or more context to the picture. but we steal memes without worrie and i hope it stays that way </p>
+<div><img src="images/meme11.jpg"alt=meme11></div>
+
 
 <h2>lets get back to basics </h2>
          <p>being able to explore cooking in all aspects. from start to finish like making a soup starting from the stock being the most important step where you can build the foundations for an amazing soup. and stocks are easy to prep for you can save all of your veggys trimmings in a freezer bag like onion tops skins, celery ends and flowers, carrot tops and peels (yes you can use all of this). asparagus ends the woody bits. then you have the bones of your choice which rarely changes the veggys for the stock but to roast or not to roast is the question and almost every time the right answer is roast em for the flavour. ^.^ finding new recipes I want to actually put on paper which is definably new to me cause I just remember them no need for it but now I like to share. </p>
-
+    <div> <img src="images/stockbasics.jpg"alt="Photo of stocks"></div>
          <p>meal planning was a lot of fun as well especially with a Costco card, the ability to get 3 whole chickens was great we broke them down and vacuumed sealed the meat product. Chicken legs thighs and supreme all nicely frozen in meal packs made life really easy to just throw something together and have fun just blind pulling something out of the freezer and be like yeah this is the base. challenge your self, make it fun do that fancy 5 course date night special. plan it together work on it together make a day out of it. the love will defiantly be in the food especially if you cook together. </p>
+<div><img src="images/prepping.jpg"alt="freezer prep"></div>
+                <p>with meal planning though the beautiful thing about it is that you just plan a dinner. like pasta or curry are my examples, pull out the classic grandma’s stock pot or crab killer and make a big batch have the nights serving and freeze the "leftovers", best to keep meats out of the stuff your freezing and as long as its air tight it can keep to 6-10 months easy to make portions that can feed the famjam or couples, can do the same with protein portions </p>
 
-        <p>with meal planning though the beautiful thing about it is that you just plan a dinner. like pasta or curry are my examples, pull out the classic grandma’s stock pot or crab killer and make a big batch have the nights serving and freeze the "leftovers", best to keep meats out of the stuff your freezing and as long as its air tight it can keep to 6-10 months easy to make portions that can feed the famjam or couples, can do the same with protein portions </p>
-
-<h2>Music is life </h2>
-        <p>I love most music, not a whole lot of country but a lot of everything else from prog rock to hip hop. blues to EDM. raspy scotch whiskey voices like tom waits, to the clear majestic voice of queens Freddy mercury. I tend to give everything a chance but i either like it or don’t never just in the middle. finding my self just kind of stick to what I know, don’t explore much because I know so much great music, I’m stuck in 90's early 2000s Rapp and hip hop, wu tang clan fat joe 50 cent run the jewels snoop dog. or one of my favorite EDM artist, Justice zeds dead adventure club, krewella, Danger glitch mob. and many more but finding music that can take you away for a escape can be the thing you need to get threw these questionable times  </p>
+ <h2>Music is life </h2>
+          <p>I love most music, not a whole lot of country but a lot of everything else from prog rock to hip hop. blues to EDM. raspy scotch whiskey voices like tom waits, to the clear majestic voice of queens Freddy mercury. I tend to give everything a chance but i either like it or don’t never just in the middle. finding my self just kind of stick to what I know, don’t explore much because I know so much great music, I’m stuck in 90's early 2000s Rapp and hip hop, wu tang clan fat joe 50 cent run the jewels snoop dog. or one of my favorite EDM artist, Justice zeds dead adventure club, krewella, Danger, glitch mob. and many more but finding music that can take you away for a escape can be the thing you need to get threw these questionable times</p>
+    <div> <img src="images/wu-tang36.jpg">  <img src="images/justice.jpg">  <img src="images/tomwaits.jpg"></div>
 
 <h2>a New challenge approaches </h2>
-<p> </p>
-
-<h2></h2>
-<p></p>
-
-
-
-
-
-
-
-
-   </body>
+    <p>Trying to find new ways to keep busy during quarantine and finding new ways to keep busy was vital to staying sane while staying in doors for so long I use to love to sew and I picked up a bunch of the projects and started to work on fixing a lot of my favorite hoodies and Pjs with basic stitching and then I started to get interested in slip stitch and hidden stitches. I also picked up my carving knifes and started to widdle but didn’t stick with it. But sc till interested and going to pick it up again but need more vision for the next project I want to do and finding focus. also currently waiting for my new book to arrive mario puzos fool's die, also trying to get back to reading. Another book that a family friend bought me for xmas was my journey into the WU-TANG "RAW" from lamont U-GOD hawkins  </p>
+  <img src="images/sewingmachine.jpg">
+    <img src="images/foolsdie.jpg">
+    <div class="right"><img src="images/RAW.jpg">
+<div class="center"><img src="images/fabianmeme.jpg">
+ </body>
    </html>
 <footer>
-<p>website made by willie jack/ N8tivepyro<p>
+        <p>website made by willie jack N8tivepyro</p>
 </footer>
